--- a/packages/backend-modules/documents/package.json
+++ b/packages/backend-modules/documents/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "dependencies": {
+    "@orbiting/backend-modules-base": "workspace:*",
+    "@orbiting/backend-modules-dataloader": "workspace:*",
+    "@orbiting/backend-modules-env": "workspace:*",
+    "@orbiting/backend-modules-search": "workspace:*",
+    "@republik/mdast-react-render": "workspace:*",
     "apollo-modules-node": "*",
     "check-env": "^1.3.0",
     "d3-array": "^2.4.0",
@@ -24,10 +29,10 @@
     "d3-format": "^1.4.4",
     "d3-time-format": "^2.2.3",
     "glamor": "^2.20.40",
-    "@republik/mdast-react-render": "workspace:*",
     "prop-types": "^15.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "unist-util-visit": "^2.0.2"
+    "unist-util-visit": "^2.0.3",
+    "yargs": "^17.7.2"
   }
 }
