--- a/packages/backend-modules/keyCDN/package.json
+++ b/packages/backend-modules/keyCDN/package.json
@@ -16,5 +16,8 @@
     "url": "https://github.com/republik/plattform/issues"
   },
   "homepage": "https://github.com/republik/plattform#readme",
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "debug": "^4.3.4"
+  }
 }
