--- a/packages/backend-modules/mail/package.json
+++ b/packages/backend-modules/mail/package.json
@@ -17,18 +17,26 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "dependencies": {
+    "@orbiting/backend-modules-base": "workspace:*",
+    "@orbiting/backend-modules-base64u": "workspace:*",
+    "@orbiting/backend-modules-env": "workspace:*",
+    "@orbiting/backend-modules-formats": "workspace:*",
+    "@orbiting/backend-modules-republik-crowdfundings": "workspace:*",
+    "@orbiting/backend-modules-schedulers": "workspace:*",
     "await-sleep": "^0.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "check-env": "^1.3.0",
     "dayjs": "^1.11.7",
-    "debug": "^4.1.1",
+    "debug": "^4.3.4",
     "handlebars": "^4.7.7",
     "he": "^1.2.0",
     "html-to-text": "^7.1.1",
+    "is-uuid": "^1.0.2",
+    "lodash": "^4.17.21",
     "moment": "^2.26.0",
     "nodemailer": "^6.6.1",
-    "recursive-readdir": "^2.2.2"
-  },
-  "devDependencies": {}
+    "recursive-readdir": "^2.2.2",
+    "yargs": "^17.7.2"
+  }
 }
