feat(www): add path alias for ./graphql and replace '@app/graphql/' -> '@graphql/'

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -12,7 +12,10 @@
     "paths": {
       "@app/*": [
         "./src/*"
-      ]
+      ],
+      "@graphql/*": [
+        "./graphql/*"
+      ],
     }
   },
   "include": [
