chore(backend/scalars): add missing deps

--- a/packages/backend-modules/scalars/package.json
+++ b/packages/backend-modules/scalars/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "dependencies": {
-    "apollo-modules-node": "*",
+    "@orbiting/backend-modules-formats": "workspace:*",
+    "apollo-modules-node": "workspace:*",
     "graphql": "^15.3.0",
     "graphql-type-json": "^0.3.2"
   }
