--- a/packages/backend-modules/referral-campaigns/package.json
+++ b/packages/backend-modules/referral-campaigns/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/jest": "^29.5.12",
+    "jest": "^29.5.0",
     "ts-jest": "^29.1.2"
   }
 }
