chore(backend/schedulers): add bluebird

--- a/packages/backend-modules/schedulers/package.json
+++ b/packages/backend-modules/schedulers/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "moment": "^2.26.0",
     "redlock": "^4.1.0"
   }
