--- a/apps/admin/.gitignore
+++ b/apps/admin/.gitignore
@@ -29,4 +29,5 @@ test/**/out
 .sentryclirc
 
 # Generated GQL types
-graphql/*/gql
+!graphql/*/__generated__/gql/README.md
+graphql/*/__generated__/gql
