--- a/apps/publikator/.gitignore
+++ b/apps/publikator/.gitignore
@@ -17,4 +17,5 @@ yarn-error.log*
 .sentryclirc
 
 # Generated GQL types
-graphql/*/gql
+!graphql/*/__generated__/gql/README.md
+graphql/*/__generated__/gql
