refactor(frontends): change gql codegen path alias from '@graphql' to '#graphql'

--- a/apps/publikator/tsconfig.json
+++ b/apps/publikator/tsconfig.json
@@ -13,10 +13,10 @@
       "@app/*": [
         "./src/*"
       ],
-      "@graphql/*": [
+      "#graphql/*": [
         "./graphql/*"
       ],
-    }
+    },
   },
   "include": [
     "next-env.d.ts",
