--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -13,7 +13,7 @@
       "@app/*": [
         "./src/*"
       ],
-      "@graphql/*": [
+      "#graphql/*": [
         "./graphql/*"
       ],
     }
