feat(www): allow passing an authorization header to the apollo client

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -14,6 +14,16 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3010
 NEXT_PUBLIC_PUBLIKATOR_BASE_URL=http://localhost:3005
 NEXT_PUBLIC_ADMIN_BASE_URL=http://localhost:3006
 
+# Relay to the backend via an API route.
+# The wild card '/:path*' is added to the end of the RELAY_PATH
+# and the RELAY_TARGET. Ensure that the RELAY_PATH is unique.
+# RELAY_PATH & RELAY_TARGET may not end in a '/'.
+RELAY_PATH=/api/relay
+RELAY_TARGET=
+# The token is appended to the relayed request as a Authorization header
+# in the form of `Bearer ${RELAY_TOKEN}`
+RELAY_TOKEN=
+
 # A CDN base url proxying your frontend url
 # - used for static folder assets
 # - in production as the next.js asset prefix
