--- a/packages/eslint-config-frontend/package.json
+++ b/packages/eslint-config-frontend/package.json
@@ -8,8 +8,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0"
   }
 }
