--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,9 +8,8 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "dev": "concurrently \"yarn dev:express\" \"yarn gql:types --watch\"",
-    "dev:express": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch next.config.js server/index.js",
-    "start": "node server/index.js",
+    "dev": "concurrently \"PORT=3010 next dev\" \"yarn gql:types --watch\"",
+    "start": "next start",
     "build": "panda codegen && yarn gql:types && next build",
     "heroku-postbuild": "npm run build",
     "test": "jest",
