--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,18 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "dev:www (staging proxy)",
-      "dependsOn": ["dev:www-server", "tsc:www", "proxy:staging"],
+      "label": "dev:www / tsc / staging proxy",
+      "dependsOn": ["dev:www", "tsc:www", "proxy:staging"],
       "problemMatcher": []
     },
     {
-      "label": "dev:www (prod proxy)",
-      "dependsOn": ["dev:www-server", "tsc:www", "proxy:prod"],
+      "label": "dev:publikator / staging proxy",
+      "dependsOn": ["dev:publikator", "proxy:staging"],
+      "problemMatcher": []
+    },
+    {
+      "label": "dev:www / tsc / prod proxy",
+      "dependsOn": ["dev:www", "tsc:www", "proxy:prod"],
       "problemMatcher": []
     },
     {
@@ -25,9 +30,21 @@
       }
     },
     {
-      "label": "dev:www-server",
+      "label": "dev:www",
       "type": "shell",
       "command": "yarn turbo run dev --filter=@orbiting/www-app...",
+      "presentation": {
+        "group": "dev",
+        "panel": "dedicated",
+        "close": true,
+        "showReuseMessage": false
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "dev:publikator",
+      "type": "shell",
+      "command": "yarn turbo run dev --filter=@orbiting/publikator-app...",
       "presentation": {
         "group": "dev",
         "panel": "dedicated",
