--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -125,6 +125,7 @@
     "framer-motion": "^11.0.3",
     "glamor": "^2.20.40",
     "graphql": "^15.3.0",
+    "hast-util-to-jsx-runtime": "^2.3.0",
     "helmet": "^3.23.3",
     "ical-generator": "^6.0.0",
     "immer": "^9.0.12",
@@ -135,6 +136,7 @@
     "load-script": "^1.0.0",
     "lodash": "^4.17.21",
     "lru-cache": "^4.1.3",
+    "mdast-zone": "^6.1.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "photoswipe": "^4.1.3",
@@ -149,10 +151,16 @@
     "react-maskedinput": "^4.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-textarea-autosize": "^7.1.2",
+    "rehype-raw": "^7.0.0",
+    "remark": "^15.0.1",
+    "remark-rehype": "^11.1.0",
     "scroll-into-view": "1.16.2",
     "sharp": "^0.31.3",
     "subscriptions-transport-ws": "^0.9.19",
     "topojson": "^3.0.2",
+    "unified": "^11.0.4",
+    "unist-util-position": "^5.0.0",
+    "unist-util-visit": "^5.0.0",
     "use-resize-observer": "^9.1.0",
     "useragent": "^2.3.0",
     "uuid": "^9.0.1",
