Revert "refactor/remove frontends express server"

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,8 +8,9 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "dev": "concurrently \"PORT=3010 next dev\" \"yarn gql:types --watch\"",
-    "start": "next start",
+    "dev": "concurrently \"yarn dev:express\" \"yarn gql:types --watch\"",
+    "dev:express": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch next.config.js server/index.js",
+    "start": "node server/index.js",
     "build": "panda codegen && yarn gql:types && next build",
     "heroku-postbuild": "npm run build",
     "test": "jest",
@@ -94,6 +95,7 @@
     "body-parser": "^1.19.1",
     "chalk": "^4.1.2",
     "clipboard-copy": "^3.2.0",
+    "compression": "^1.7.4",
     "cookie": "^0.3.1",
     "d3-array": "^1.2.4",
     "d3-collection": "^1.0.7",
@@ -116,9 +118,14 @@
     "dotenv": "^8.6.0",
     "downshift": "^2.2.3",
     "events": "^3.3.0",
+    "express": "^4.17.2",
+    "express-basic-auth": "^1.2.1",
+    "express-ipfilter": "^1.3.1",
+    "express-rate-limit": "^5.5.1",
     "framer-motion": "^11.0.3",
     "glamor": "^2.20.40",
     "graphql": "^15.3.0",
+    "helmet": "^3.23.3",
     "ical-generator": "^6.0.0",
     "immer": "^9.0.12",
     "isomorphic-dompurify": "^2.3.0",
