feat(www): add PROLITERRIS_DEBUG env var to log the request status, else only log errors & warn

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -120,3 +120,7 @@ DRAFT_MODE_SECRET=
 
 # Secret used to allow revalidation of static pages in app-dir
 REVALIDATION_SECRET=
+
+# Enable debug logging for PROLITTERIS by setting to 1 or true
+# disable by setting to 0 or no value
+PROLITTERIS_DEBUG=0
