--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "husky": "^7.0.0",
     "lint-staged": "^12.3.3",
     "prettier": "^2.5.1",
-    "turbo": "1.10.12",
+    "turbo": "^1.13.0",
     "typescript": "^5.2.2",
     "yaproxy": "^1.0.2"
   },
