chore(lead-tracking): fix migration, add import script

--- a/packages/backend-modules/lead-tracking/package.json
+++ b/packages/backend-modules/lead-tracking/package.json
@@ -3,8 +3,9 @@
   "description": "Simplify from mailchimp lead tracking imports",
   "authors": "Henning Dahlheim",
   "version": "1.0.0",
-  "main": "",
   "dependencies": {
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "@orbiting/backend-modules-base": "*",
+    "@orbiting/backend-modules-env": "*"
   }
 }
