docs(gen-backend-module): add readme

--- a/packages/backend-modules/gen-backend-module/package.json
+++ b/packages/backend-modules/gen-backend-module/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@orbiting/gen-backend-module",
-  "description": "description",
+  "description": "Script forgenerating a typescript compatible backend module",
   "author": "Henning Dahlheim <henning.dahlheim@republik.ch>",
   "version": "1.0.0",
   "type": "module",
