--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -131,6 +131,7 @@
     "lodash": "^4.17.21",
     "lru-cache": "^4.1.3",
     "next": "^14.1.4",
+    "next-plausible": "^3.12.0",
     "next-themes": "^0.2.1",
     "photoswipe": "^4.1.3",
     "prop-types": "^15.8.1",
