chore: ensure sentry is disabled in development or if SENTRY_DISABLED=true

--- a/apps/publikator/.env.example
+++ b/apps/publikator/.env.example
@@ -17,3 +17,6 @@ NEXT_PUBLIC_PUBLIC_BASE_URL=http://localhost:3005
 
 # Use prefix for repository names: "{REPO_PREFIX}some-repository-name"
 #REPO_PREFIX=dev-
+
+# Disable Sentry while in development
+# SENTRY_DISABLE=true
