--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -120,3 +120,6 @@ DRAFT_MODE_SECRET=
 
 # Secret used to allow revalidation of static pages in app-dir
 REVALIDATION_SECRET=
+
+# Disable Sentry while in development
+# SENTRY_DISABLE=true
