--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -7,3 +7,6 @@ NEXT_PUBLIC_REPUBLIK_FRONTEND_URL=http://localhost:3010
 
 # List of URLs which fetch this website in a frame
 #CSP_FRAME_ANCESTORS=https://domain.tld,https://domain2.tld
+
+# Disable Sentry while in development
+# SENTRY_DISABLE=true
