--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,7 +21,7 @@
     "zat:package": "docker compose run --rm zat-package"
   },
   "dependencies": {
-    "@apollo/client": "~3.8.4",
+    "@apollo/client": "^3.8.4",
     "@next/bundle-analyzer": "^14.1.4",
     "@project-r/styleguide": "*",
     "@republik/icons": "*",
