--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -71,7 +71,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
-    "@types/node": "^16.11.21",
+    "@types/node": "18",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "concurrently": "^8.2.1",
