--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -55,7 +55,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/events": "^3.0.0",
     "@types/jest": "^29.5.1",
-    "@types/node": "^16.11.21",
+    "@types/node": "18",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/useragent": "2.3.1",
