--- a/packages/nextjs-apollo-client/package.json
+++ b/packages/nextjs-apollo-client/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@apollo/client": "^3.8.4",
     "@republik/eslint-config-frontend": "*",
-    "@types/node": "^17.0.41",
+    "@types/node": "18",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "cross-fetch": "^3.1.5",
