--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -62,7 +62,7 @@
     "@types/body-scroll-lock": "^3.1.0",
     "@types/d3-time-format": "2.1.1",
     "@types/jest": "^29.5.1",
-    "@types/node": "^16.11.6",
+    "@types/node": "18",
     "@types/prop-types": "^15.7.4",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
