--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,8 +21,8 @@
     "zat:package": "docker compose run --rm zat-package"
   },
   "dependencies": {
-    "@apollo/client": "~3.8.4",
-    "@next/bundle-analyzer": "^14.1.4",
+    "@apollo/client": "^3.8.4",
+    "@next/bundle-analyzer": "^14.2.3",
     "@project-r/styleguide": "*",
     "@republik/icons": "*",
     "@republik/mdast-react-render": "*",
@@ -44,7 +44,7 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
-    "next": "^14.1.4",
+    "next": "^14.2.3",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-autosize-textarea": "^5.0.1",
@@ -60,18 +60,18 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/client-preset": "4.1.0",
-    "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/client-preset": "4.2.5",
+    "@graphql-codegen/introspection": "4.0.3",
     "@graphql-codegen/schema-ast": "^4.0.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@next/env": "^14.1.4",
+    "@next/env": "^14.2.3",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
-    "@types/node": "^16.11.21",
+    "@types/node": "18",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "concurrently": "^8.2.1",
