--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -31,12 +31,12 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/client-preset": "4.1.0",
-    "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/client-preset": "4.2.5",
+    "@graphql-codegen/introspection": "4.0.3",
     "@graphql-codegen/schema-ast": "^4.0.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@next/env": "^14.1.4",
+    "@next/env": "^14.2.3",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.5",
@@ -55,8 +55,8 @@
     "raf": "^3.4.0"
   },
   "dependencies": {
-    "@apollo/client": "~3.8.4",
-    "@next/bundle-analyzer": "^14.1.4",
+    "@apollo/client": "^3.8.4",
+    "@next/bundle-analyzer": "^14.2.3",
     "@project-r/styleguide": "*",
     "@republik/icons": "*",
     "@republik/mdast-react-render": "*",
@@ -87,7 +87,7 @@
     "js-yaml": "^3.14.0",
     "jsonlint-mod": "^1.7.6",
     "lodash": "^4.17.21",
-    "next": "^14.1.4",
+    "next": "^14.2.3",
     "prop-types": "^15.6.2",
     "query-string": "^7.1.1",
     "ramda": "^0.29.0",
