--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -51,7 +51,7 @@
     "use-memo-one": "^1.1.2"
   },
   "devDependencies": {
-    "@apollo/client": "~3.8.4",
+    "@apollo/client": "^3.8.4",
     "@babel/standalone": "^7.15.8",
     "@republik/eslint-config-frontend": "*",
     "@republik/icons": "*",
@@ -62,7 +62,7 @@
     "@types/body-scroll-lock": "^3.1.0",
     "@types/d3-time-format": "2.1.1",
     "@types/jest": "^29.5.1",
-    "@types/node": "^16.11.6",
+    "@types/node": "18",
     "@types/prop-types": "^15.7.4",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
@@ -101,7 +101,7 @@
     "validate-commit-msg": "^2.14.0"
   },
   "peerDependencies": {
-    "@apollo/client": "~3.8.4",
+    "@apollo/client": "^3.8.4",
     "@republik/icons": "*",
     "d3-array": "1.x",
     "d3-color": "1.x",
