--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@project-r/styleguide": "*",
     "@republik/icons": "*",
+    "@republik/theme": "*",
     "@republik/ui-docs-demo": "*",
     "next": "^14.2.3",
     "nextra": "^2.13.2",
@@ -23,6 +24,7 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@pandacss/dev": "^0.37.2",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
     "@types/node": "18"
