fix: add prepare script to docs

--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "panda codegen"
   },
   "dependencies": {
     "@project-r/styleguide": "*",
