--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "apps/*",
       "packages/*",
       "packages/mdast/*",
-      "packages/backend-modules/*"
+      "packages/backend-modules/*",
+      "tests"
     ],
     "nohoist": [
       "styleguide/slate",
