test(www): move playwright setup into www and run against dev server

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
       "apps/*",
       "packages/*",
       "packages/mdast/*",
-      "packages/backend-modules/*",
-      "tests"
+      "packages/backend-modules/*"
     ],
     "nohoist": [
       "styleguide/slate",
