--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -14,6 +14,7 @@
     "heroku-postbuild": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:playwright": "playwright test",
     "cloc": "find . -name '*.js' -not -path \"./node_modules*\" -not -path \"./.next*\" | xargs wc -l",
     "lint": "next lint",
     "translations-raw": "NODE_OPTIONS='-r dotenv/config' gsheets --key=1uZUiI5mlQmR72N5I58bhZ8dIZTd4UB_ZRUnfX8q0h_s --title=live --pretty --out lib/translations.json",
@@ -44,6 +45,7 @@
     "@next/env": "^14.1.4",
     "@pandacss/dev": "^0.36.1",
     "@parcel/watcher": "^2.3.0",
+    "@playwright/test": "^1.43.1",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
     "@stripe/stripe-js": "^1.22.0",
