--- a/apps/www/.gitignore
+++ b/apps/www/.gitignore
@@ -9,9 +9,13 @@
 # this project uses npm so far
 yarn.lock
 
+# env files
+.env
+# local env files
+.env*.local
+
 # misc
 .DS_Store
-*.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
