--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -14,7 +14,7 @@
     "heroku-postbuild": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:playwright": "playwright test",
+    "test:e2e": "playwright test",
     "cloc": "find . -name '*.js' -not -path \"./node_modules*\" -not -path \"./.next*\" | xargs wc -l",
     "lint": "next lint",
     "translations-raw": "NODE_OPTIONS='-r dotenv/config' gsheets --key=1uZUiI5mlQmR72N5I58bhZ8dIZTd4UB_ZRUnfX8q0h_s --title=live --pretty --out lib/translations.json",
