--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,4 +48,10 @@ services:
       - ./docker-data/postgres:/var/lib/postgresql/data:delegated
     ports:
       - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s
     command: ['postgres', '-c', 'log_statement=all']
