--- a/apps/www/.gitignore
+++ b/apps/www/.gitignore
@@ -29,3 +29,8 @@ styled-system
 .sentryclirc
 !graphql/*/__generated__/gql/README.md
 graphql/*/__generated__/gql
+
+# Playwright
+
+playwright-report/
+test-results/
