feat(container): add docker-compoose-test.yml

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "@orbiting/backend-modules-invoices": "*",
     "@orbiting/backend-modules-keyCDN": "*",
     "@orbiting/backend-modules-mail": "*",
+    "@orbiting/backend-modules-maillog": "*",
     "@orbiting/backend-modules-mailbox": "*",
     "@orbiting/backend-modules-matomo": "*",
     "@orbiting/backend-modules-migrations": "*",
