--- a/packages/backend-modules/voting/package.json
+++ b/packages/backend-modules/voting/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "apollo-modules-node": "*",
-    "d3": "^5.16.0"
+    "d3": "^5.16.0",
+    "gsheets": "^3.0.1"
   }
 }
