--- a/packages/backend-modules/push-notifications/package.json
+++ b/packages/backend-modules/push-notifications/package.json
@@ -19,9 +19,7 @@
     "url": "https://github.com/republik/plattform/issues"
   },
   "homepage": "https://github.com/republik/plattform#readme",
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "@firebase/app-types": "0.6.1",
     "@firebase/auth-interop-types": "0.1.5",
