--- a/packages/backend-modules/translate/package.json
+++ b/packages/backend-modules/translate/package.json
@@ -17,7 +17,5 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "scripts": {},
-  "dependencies": {
-    "dotenv": "^10.0.0"
-  }
+  "dependencies": {}
 }
