--- a/packages/backend-modules/voting/package.json
+++ b/packages/backend-modules/voting/package.json
@@ -19,9 +19,7 @@
     "url": "https://github.com/republik/plattform/issues"
   },
   "homepage": "https://github.com/republik/plattform#readme",
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "apollo-modules-node": "*",
     "d3": "^5.16.0",
