refactor(migrations): allow db creation from tests

--- a/packages/backend-modules/migrations/package.json
+++ b/packages/backend-modules/migrations/package.json
@@ -11,6 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "main": "index.js",
   "bugs": {
     "url": "https://github.com/republik/plattform/issues"
   },
