--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -53,7 +53,7 @@ services:
   republik-api-setup:
     image: api-republik-test:latest
     env_file:
-      - apps/api/.env
+      - apps/api/.env.test.local
     environment:
       - DATABASE_URL=postgres://postgres@postgres:5432/republik-test
     entrypoint: ["launcher", "yarn migrate:db:create && yarn migrate:up && yarn migrate:db:import"]
@@ -65,7 +65,7 @@ services:
   republik-api:
     image: api-republik-test:latest
     env_file:
-      - apps/api/.env
+      - apps/api/.env.test.local
     environment:
       - DATABASE_URL=postgres://postgres@postgres:5432/republik-test
       - ELASTIC_URL=http://elastic:9200
