--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -33,9 +33,9 @@
     "url": "https://github.com/republik/plattform.git"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.dist.json",
+    "build": "tsup",
     "start": "serve -s build",
-    "dev": "tsc -w --project tsconfig.dist.json",
+    "dev": "tsup --watch",
     "test": "jest",
     "test:dev": "jest --watch"
   },
@@ -95,6 +95,7 @@
     "scroll-into-view": "1.15.0",
     "semantic-release": "^17.1.1",
     "topojson": "^3.0.2",
+    "tsup": "^8.0.2",
     "validate-commit-msg": "^2.14.0"
   },
   "peerDependencies": {
