--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "scripts/start.sh",
     "start:scheduler": "cd apps/api && yarn start:scheduler",
     "build": "scripts/build.sh",
+    "build:cnb": "node packages/container-builder/index.js",
     "dev": "turbo run dev --parallel --concurrency=100",
     "dev:docs": "turbo run dev --filter=@republik/docs...",
     "dev:www": "turbo run dev --filter=@orbiting/www-app...",
@@ -55,6 +56,7 @@
     "migrate:create": "packages/backend-modules/migrations/script/create.js",
     "migrate:up": "DOTENV_CONFIG_PATH=apps/api/.env NODE_OPTIONS='-r dotenv/config' db-migrate up --migrations-dir packages/backend-modules/migrations/migrations",
     "migrate:down": "DOTENV_CONFIG_PATH=apps/api/.env NODE_OPTIONS='-r dotenv/config' db-migrate down --migrations-dir packages/backend-modules/migrations/migrations --verbose",
+    "heroku:migrate:up": "db-migrate up --migrations-dir packages/backend-modules/migrations/migrations",
     "db:seed": "packages/backend-modules/republik-crowdfundings/seeds/script/seed.js",
     "notifications:send": "cd packages/backend-modules/republik && node ../push-notifications/script/sendNotification.js",
     "auth:role:user": "node packages/backend-modules/auth/script/roleUser",
