--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -10,3 +10,6 @@ NEXT_PUBLIC_REPUBLIK_FRONTEND_URL=http://localhost:3010
 
 # Disable Sentry while in development
 # SENTRY_DISABLE=true
+
+# Plausible Analytics
+# NEXT_PUBLIC_PLAUSIBLE_DOMAIN=
