--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -45,6 +45,7 @@
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "next": "^14.2.3",
+    "next-plausible": "^3.12.0",
     "prop-types": "^15.7.2",
     "react": "^18.3.1",
     "react-autosize-textarea": "^5.0.1",
