feat(publikator): setup Plausible

--- a/apps/publikator/.env.example
+++ b/apps/publikator/.env.example
@@ -20,3 +20,6 @@ NEXT_PUBLIC_PUBLIC_BASE_URL=http://localhost:3005
 
 # Disable Sentry while in development
 # SENTRY_DISABLE=true
+
+# Plausible analytics
+# NEXT_PUBLIC_PLAUSIBLE_DOMAIN=
