--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -85,6 +85,7 @@
     "jsonlint-mod": "^1.7.6",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
+    "next-plausible": "^3.12.0",
     "prop-types": "^15.6.2",
     "query-string": "^7.1.1",
     "ramda": "^0.29.0",
