--- a/apps/project-r/package.json
+++ b/apps/project-r/package.json
@@ -32,6 +32,7 @@
     "downshift": "^2.2.3",
     "glamor": "^2.20.40",
     "next": "^14.2.3",
+    "next-plausible": "^3.12.0",
     "prop-types": "^15.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
