--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "mdx.experimentalLanguageServer": true,
   "jest.jestCommandLine": "yarn test",
-  "jest.rootPath": "packages/backend-modules/testing",
-  "asciidoc.antora.enableAntoraSupport": false
+  "jest.rootPath": "packages/backend-modules/testing"
 }
