--- a/apps/project-r/.env.example
+++ b/apps/project-r/.env.example
@@ -1,7 +1,8 @@
 NEXT_PUBLIC_API_URL=http://localhost:5010/graphql
 NEXT_PUBLIC_BASE_URL=http://localhost:4000
 NEXT_PUBLIC_REPUBLIK_BASE_URL=http://localhost:3010
-ASSETS_REPOS_REDIRECT_TARGET=http://localhost:5020/s3/some/path/
+# Remote URL to the custom assets server, if given
+# NEXT_PUBLIC_CDN_URL=http://localhost:5020/s3/some/path/
 
 # Project R Newsletter format ID
 NEWSLETTER_ID=12345
