refactor(apps/project-r): rm SG env var

--- a/apps/project-r/.env.example
+++ b/apps/project-r/.env.example
@@ -7,4 +7,4 @@ NEXT_PUBLIC_REPUBLIK_BASE_URL=http://localhost:3010
 # Project R Newsletter format ID
 NEWSLETTER_ID=12345
 
-SG_FONT_STYLES={"serifTitle":{"fontFamily":"serif","fontWeight":900},"serifRegular":{"fontFamily":"serif"},"serifItalic":{"fontFamily":"serif","fontStyle":"italic"},"serifBold":{"fontFamily":"serif","fontWeight":700},"serifBoldItalic":{"fontFamily":"serif","fontWeight":700,"fontStyle":"italic"},"sansSerifRegular":{"fontFamily":"sans-serif"},"sansSerifItalic":{"fontFamily":"sans-serif","fontStyle":"italic"},"sansSerifMedium":{"fontFamily":"sans-serif","fontWeight":500},"monospaceRegular":{"fontFamily":"monospace"},"cursiveTitle":{"fontFamily":"sans-serif","fontWeight":500,"fontStyle":"italic"}}
+SG_FONT_STYLES={}
