refactor(apps): use fonts CSS instead of SG

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -27,6 +27,7 @@
     "@republik/icons": "*",
     "@republik/mdast-react-render": "*",
     "@republik/nextjs-apollo-client": "*",
+    "@republik/theme": "*",
     "@sentry/nextjs": "^7.110.1",
     "apollo-cache-inmemory": "^1.6.6",
     "d3-array": "^1.2.4",
