refactor(styleguide): clean up font style, color definitions etc

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -34,6 +34,7 @@
       "require": "./__generated__/jsx/index.mjs",
       "import": "./__generated__/jsx/index.mjs"
     },
-    "./styles.css": "./__generated__/styles.css"
+    "./styles.css": "./__generated__/styles.css",
+    "./fonts.css": "./fonts.css"
   }
 }
