--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -60,6 +60,7 @@
     "@republik/nextjs-apollo-client": "*",
     "@republik/remark-preset": "*",
     "@republik/slate-mdast-serializer": "*",
+    "@republik/theme": "*",
     "@sentry/nextjs": "^7.110.1",
     "axios": "^1.0.0",
     "clipboard-copy": "^3.1.0",
