refactor(theme): move logo data to json

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -36,10 +36,6 @@
     },
     "./styles.css": "./__generated__/styles.css",
     "./fonts.css": "./fonts.css",
-    "./logo": {
-      "types": "./logo.d.ts",
-      "require": "./logo.mjs",
-      "import": "./logo.mjs"
-    }
+    "./logo.json": "./logo.json"
   }
 }
