fix: build CSS with panda CLI instead of postcss

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,9 +8,9 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "dev": "concurrently \"PORT=3010 next dev\" \"yarn gql:types --watch\"",
+    "dev": "concurrently \"PORT=3010 next dev\" \"yarn gql:types --watch\" \"panda --watch\"",
     "start": "next start",
-    "build": "panda codegen --clean && yarn gql:types && next build",
+    "build": "panda && yarn gql:types && next build",
     "heroku-postbuild": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
