feat(docker): add mailhog container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,9 @@ services:
     ports:
       - 5432:5432
     command: ['postgres', '-c', 'log_statement=all']
+
+  mailhog:
+    image: mailhog/mailhog:v1.0.1
+    ports:
+      - 1025:1025
+      - 8025:8025
