--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -41,7 +41,7 @@ services:
     ports:
       - 5432:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ['CMD-SHELL', 'pg_isready']
       interval: 30s
       timeout: 60s
       retries: 5
@@ -54,7 +54,11 @@ services:
       - apps/api/.env.test.local
     environment:
       - DATABASE_URL=postgres://postgres@postgres:5432/republik-test
-    entrypoint: ["launcher", "yarn migrate:db:create && yarn migrate:up && yarn migrate:db:import"]
+    entrypoint:
+      [
+        'launcher',
+        'yarn migrate:db:create && yarn migrate:up && yarn migrate:db:import',
+      ]
     depends_on:
       - elastic
       - redis
@@ -75,3 +79,9 @@ services:
       - republik-api-setup
     ports:
       - 5010:5010
+
+  mailhog:
+    image: mailhog/mailhog:v1.0.1
+    ports:
+      - 1025:1025
+      - 8025:8025
