feat(www): allow redirecting to a set of white-listed hostnames after login

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -14,6 +14,8 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3010
 NEXT_PUBLIC_PUBLIKATOR_BASE_URL=http://localhost:3005
 NEXT_PUBLIC_ADMIN_BASE_URL=http://localhost:3006
 
+NEXT_PUBLIC_ALLOWED_SIGNIN_REDIRECT_HOSTS=localhost:3010,localhost:3005,localhost:3006,localhost:3000
+¨
 # A CDN base url proxying your frontend url
 # - used for static folder assets
 # - in production as the next.js asset prefix
