chore(mailchimp): fix some imports and ts config

--- a/packages/backend-modules/mailchimp/package.json
+++ b/packages/backend-modules/mailchimp/package.json
@@ -10,5 +10,10 @@
     "@orbiting/backend-modules-scalars": "*",
     "@orbiting/backend-modules-types": "*",
     "apollo-modules-node": "*"
+  },
+  "scripts": {
+    "dev": "tsc -w",
+    "build": "tsc",
+    "test": "jest"
   }
 }
