--- a/packages/backend-modules/mailchimp/tsconfig.json
+++ b/packages/backend-modules/mailchimp/tsconfig.json
@@ -7,7 +7,9 @@
      "moduleResolution": "Node16",
      "declaration": true,
      "declarationDir": "build/@types",
-     "declarationMap": true
+     "declarationMap": true,
+     "allowJs": true,
+     "noImplicitAny": false,
    },
    "include": ["."],
    "exclude": ["node_modules", "__test__", "build"]
