--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -41,8 +41,7 @@ NEXT_PUBLIC_PAYPAL_DONATE_LINK=https://www.sandbox.paypal.com/cgi-bin/webscr?cmd
 # NEXT_PUBLIC_EMAIL_IR=ir@example.com
 # NEXT_PUBLIC_EMAIL_PAYMENT=payment@example.com
 
-# NEXT_PUBLIC_MATOMO_URL_BASE=https://matomo.example.com
-# NEXT_PUBLIC_MATOMO_SITE_ID=1
+# NEXT_PUBLIC_PLAUSIBLE_DOMAIN=republik.ch
 
 # Stripe platform account publishable key
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_x
