feat(job-queue): add getInstance method

--- a/packages/backend-modules/job-queue/package.json
+++ b/packages/backend-modules/job-queue/package.json
@@ -9,6 +9,11 @@
     "pg-boss": "^9.0.3",
     "debug": "^4.3.5"
   },
+  "scripts": {
+    "dev": "tsc -w",
+    "build": "tsc",
+    "test": "jest"
+  },
   "devDependencies": {
     "@testcontainers/postgresql": "^10.9.0",
     "@faker-js/faker": "^8.4.1",
