feat(payments): add stripe customer id resolver

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -49,6 +49,8 @@
     "@orbiting/backend-modules-types": "*",
     "@orbiting/backend-modules-utils": "*",
     "@orbiting/backend-modules-voting": "*",
+    "@orbiting/backend-modules-payments": "*",
+    "@orbiting/backend-modules-job-queue": "*",
     "apollo-modules-node": "*",
     "d3-array": "^2.4.0",
     "d3-dsv": "^1.2.0",
