--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -42,6 +42,7 @@ NEXT_PUBLIC_PAYPAL_DONATE_LINK=https://www.sandbox.paypal.com/cgi-bin/webscr?cmd
 # NEXT_PUBLIC_EMAIL_PAYMENT=payment@example.com
 
 # NEXT_PUBLIC_PLAUSIBLE_DOMAIN=republik.ch
+# NEXT_PUBLIC_PLAUSIBLE_DASHBOARD_URL=https://plausible.io/republik.ch
 
 # Stripe platform account publishable key
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_x
